gccida/c3/ix86_compute_frame_layout
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_compute_frame_layout/src/i386.c:4690:38: error: use of undeclared identifier 'byte_9AA96F'
if ( *( _BYTE *)( v14 + 9981631) && !byte_9AA96F[v14] && !byte_9AA92F[v14] && v14 != 7 ) 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_compute_frame_layout/src/i386.c:4690:59: error: use of undeclared identifier 'byte_9AA92F'
if ( *( _BYTE *)( v14 + 9981631) && !byte_9AA96F[v14] && !byte_9AA92F[v14] && v14 != 7 ) 
                                                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_compute_frame_layout/src/i386.c:4704:36: error: use of undeclared identifier 'byte_9AA96F'
if ( *( _BYTE *)( m + 9981631) && !byte_9AA96F[m] ) 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_compute_frame_layout/src/i386.c:4705:8: error: use of undeclared identifier 'byte_9AA92F'
v13 += byte_9AA92F[m] == 0; 
       ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_compute_frame_layout/src/obj/i386.o] Error 1
